examples/good/04-01-print.lagger
int main(){
    println(42);
    println("Bonjour!");
    println(true);
    return 0;
}

