examples/bad/04-01-invalid-print.lagger
int main(){
    println("Hello World", 5);
    return 0;
}